Update to fit Jabbr use case

--- a/pg_dump-to-s3.conf.sample
+++ b/pg_dump-to-s3.conf.sample
@@ -9,15 +9,13 @@
 #
 
 # Postgres credentials
-PG_HOST="127.0.0.1"
-PG_USER="postgres"
-PG_PORT=5432
+# see .env
 
 # List of databases to backup (comma separated)
-PG_DATABASES="database1,database2,database3"
+PG_DATABASES="postgres"
 
 # Bucket and path within S3
-S3_PATH="my_bucket/my_directory"
+S3_PATH="backup.jabbr.ai/local/database/pg"
 
 # Number of days until the backups are deleted from S3
-DELETE_AFTER="7 days"
+DELETE_AFTER="21 days"
